rep-commission-lwc/force-app/main/default/objects/Commission_Tier__mdt/fields/Commission_Plan__c.field-meta.xml
<CustomField>
    <fullName>Commission_Plan__c</fullName>
    <label>Commission Plan</label>
    <referenceTo>Commission_Plan__mdt</referenceTo>
    <relationshipLabel>Commission Tiers</relationshipLabel>
    <relationshipName>Commission_Tiers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>