rep-commission-lwc/force-app/main/default/objects/Commission_Tier__mdt/fields/Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Effective_End__c</fullName>
    <label>Effective End</label>
    <type>Date</type>
</CustomField>