rep-commission-lwc/force-app/main/default/objects/Commission_Tier__mdt/fields/Lowest_of_Funded_Unit_Against_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Lowest_of_Funded_Unit_Against_Eligible__c</fullName>
    <label>Lowest % of Funded Unit Against Eligible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>