rep-commission-lwc/force-app/main/default/objects/Commission_Tier__mdt/fields/Minimum_Margin__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Margin__c</fullName>
    <label>Minimum Margin %</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>